en este commit esta funcionando el controlador de modulo para enviar los datos de los modulos al que el usuario tiene permiso, enviando el ID de este,

--- a/.env
+++ b/.env
@@ -13,14 +13,13 @@
 #--------------------------------------------------------------------
 # ENVIRONMENT
 #--------------------------------------------------------------------
-
-# CI_ENVIRONMENT = production
+ CI_ENVIRONMENT =  production
 
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
 
-# app.baseURL = ''
+ app.baseURL = 'http://localhost/sinapptic/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
