--- a/app/.htaccess
+++ b/app/.htaccess
@@ -4,3 +4,10 @@
 <IfModule !authz_core_module>
 	Deny from all
 </IfModule>
+# Allow cross-origin requests
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "http://localhost:4200"
+    Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+    Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Header always set Access-Control-Max-Age "1000"
+</IfModule>
