en este punto el codigo ya quedo 10/10, se completo el crud de usuarios, las funciones de componentes y modulos y el login

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ JWT_SEGURA=ClaV3inutilizabl3P0rUsuari0N0rmal
 # APP
 #--------------------------------------------------------------------
 
- app.baseURL = 'http://localhost/sinapptic/'
+ app.baseURL = 'http://localhost/Sinapptic-backend/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
